--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 			<div class="kotak">
 				<h1 class="ml15">
 					<span class="word">Hai Cantik</span>
-					<span class="word">Aku</span>
+					<span class="word">Ku</span>
 				</h1>
 			</div>
 		</div>
 		<div class="halaman halaman-3">
 			<div class="kotak">
-				<h1 class="ml16">Pacarmu Yang Wangi</h1>
+				<h1 class="ml16">Ini Pacarmu Yang Wangi</h1>
 			</div>
 		</div>
 		<div class="halaman halaman-4">
